<resources>
    <string name="app_name">Bathroom Break</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Register</string>
    <string name="new_account">New Account</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="title_activity_maps">Bathroom Break</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Favorite</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="facebook_app_id">491321428119533</string>
    <string name="fb_login_protocol_scheme">fb491321428119533</string>

</resources>
